# blax

./: .coveragerc  .gitignore  .gitmodules  .project.sh  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: logo.blax.drawio
src/: _black_version.py
src/blax/: __init__.py  __main__.py  __monkeypatching__.py  black  booleanify.py  cache.py  init.py  lines.py  mode.py  skeleton.py
src/blax/blib2to3/: __init__.py  pytree.py
src/blax/super_alignments/: const.py  format_super_alignment.py  format_super_brackets.py  format_super_empty_lines.py  jot_line.py  nested_show_level.py
src/blaxd/: __init__.py  __main__.py
tests/: conftest.py  test_skeleton.py
